--- a/launchlab/index.html
+++ b/launchlab/index.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/output.css" rel="stylesheet">
-    <link href="assets/style.css" rel="stylesheet">
-    <link href="assets/fonts.css" rel="stylesheet">
+    <link href="../assets/output.css" rel="stylesheet">
+    <link href="../assets/style.css" rel="stylesheet">
+    <link href="../assets/fonts.css" rel="stylesheet">
 
     <style>
         * {
@@ -60,13 +60,13 @@
                 <a href="#download"
                     class="flex w-fit items-center gap-4 uppercase text-base font-medium bg-[#FB5A21] text-white px-5 py-3 rounded hover:scale-105 transition-transform duration-200 ease-in-out">
                     Launch now
-                    <img class="w-6 h-6" src="assets/images/rocket.svg" alt="Rocket">
+                    <img class="w-6 h-6" src="../assets/images/rocket.svg" alt="Rocket">
                 </a>
             </div>
 
             <div class="phone-wrapper flex justify-center relative min-h-[625px]">
-                <img class="phone1 shadow-sm" src="assets/images/gute-google-rezension-1.png" alt="">
-                <img class="phone2 shadow-sm" src="assets/images/schlechte-google-rezension1.png" alt="">
+                <img class="phone1 shadow-sm" src="../assets/images/gute-google-rezension-1.png" alt="">
+                <img class="phone2 shadow-sm" src="../assets/images/schlechte-google-rezension1.png" alt="">
             </div>
         </div>
     </section>
@@ -103,7 +103,7 @@
                 <div class="w-full h-[440px] flex flex-row py-5 px-6 absolute left-0 right-0 top-14 z-0"
                     id="feature1-content">
                     <img class="h-[400px] ml-[5rem] shadow-sm hover:scale-105 transition-transform duration-200 ease-in-out"
-                        src="assets/images/gute-google-rezension-1.png" alt="">
+                        src="../assets/images/gute-google-rezension-1.png" alt="">
 
                     <div class="w-3/5 h-full flex flex-col justify-center gap-6 px-6 py-2">
                         <div class="flex flex-col gap-2 fade-in-left">
@@ -151,7 +151,7 @@
                     </div>
 
                     <img class="h-[400px] shadow-sm hover:scale-105 transition-transform duration-200 ease-in-out"
-                        src="assets/images/gute-google-rezension-1.png" alt="">
+                        src="../assets/images/gute-google-rezension-1.png" alt="">
 
                     <div class="w-1/3 h-full flex flex-col justify-center gap-6 px-6 py-2">
                         <div class="flex flex-col gap-2 fade-in-left animation-delay-2">
@@ -192,7 +192,7 @@
                     </div>
 
                     <img class="h-[400px] mr-[5rem] shadow-sm hover:scale-105 transition-transform duration-200 ease-in-out"
-                        src="assets/images/gute-google-rezension-1.png" alt="">
+                        src="../assets/images/gute-google-rezension-1.png" alt="">
                 </div>
             </div>
         </div>
@@ -237,7 +237,7 @@
                 <div class="grid grid-cols-1 min-[450px]:grid-cols-2 md:grid-cols-3 gap-8">
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl md:mt-20 mx-auto min-[450px]:mr-0 shadow-sm">
-                        <img src="assets/images/hanna.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/hanna.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div class="member-content rounded-2xl bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold">Hanna</h3>
@@ -247,7 +247,7 @@
                     </div>
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl mx-auto min-[450px]:ml-0 md:mx-auto shadow-sm">
-                        <img src="assets/images/eric.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/eric.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div class="member-content rounded-2xl bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold">Eric</h3>
@@ -257,7 +257,7 @@
                     </div>
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl md:mt-20 mx-auto min-[450px]:mr-0 md:ml-0 shadow-sm">
-                        <img src="assets/images/henrik.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/henrik.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div class="member-content rounded-2xl bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold">Henrik</h3>
@@ -267,7 +267,7 @@
                     </div>
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl mx-auto min-[450px]:ml-0 md:mr-0 md:ml-auto shadow-sm">
-                        <img src="assets/images/leopold.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/leopold.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div class="member-content rounded-2xl bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold">Leopold</h3>
@@ -277,7 +277,7 @@
                     </div>
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl md:-mt-20 mx-auto min-[450px]:mr-0 md:mx-auto shadow-sm">
-                        <img src="assets/images/maximillian.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/maximillian.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div
                             class="member-content rounded-2xl md:-mt-20 bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
@@ -288,7 +288,7 @@
                     </div>
                     <div
                         class="member-wrapper overflow-hidden w-44 h-56 rounded-2xl mx-auto min-[450px]:ml-0 md:mr-0 shadow-sm">
-                        <img src="assets/images/jai.jpg" alt="" class="w-44 h-56 object-cover" />
+                        <img src="../assets/images/jai.jpg" alt="" class="w-44 h-56 object-cover" />
                         <div class="member-content rounded-2xl bg-black bg-opacity-75 text-white flex items-end">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold">Jai</h3>
@@ -306,7 +306,7 @@
             class="mx-auto w-full px-5 md:max-w-md lg:max-w-lg xl:max-w-xl xxl:max-w-xxl grid grid-cols-1 grid-rows-2 md:grid-cols-2 md:grid-rows-1 md:justify-center items-center py-16">
             <div class="flex justify-center gap-4 mt-8">
                 <img class="w-[170px] shadow-sm hover:scale-105 transition-transform duration-200 ease-in-out"
-                    src="assets/images/gute-google-rezension-1.png" alt="">
+                    src="../assets/images/gute-google-rezension-1.png" alt="">
             </div>
 
             <div class="text-black">
@@ -319,7 +319,7 @@
 
                 <a href="#"
                     class="flex w-[120px] h-auto mt-4 hover:scale-105 transition-transform duration-200 ease-in-out">
-                    <img class="w-[120px] h-[40px]" src="assets/images/download-on-app-store.svg" alt="">
+                    <img class="w-[120px] h-[40px]" src="../assets/images/download-on-app-store.svg" alt="">
                 </a>
             </div>
         </div>
@@ -339,13 +339,13 @@
 
             <div class="flex col-span-4 items-center justify-end h-full gap-3">
                 <a href="https://mast.informatik.uni-hamburg.de/mlab/">
-                    <img src="assets/images/uhh-logo.svg" alt="Universität Hamburg Logo" class="h-14">
+                    <img src="../assets/images/uhh-logo.svg" alt="Universität Hamburg Logo" class="h-14">
                 </a>
 
-                <img class="w-8" src="assets/images/cross.svg" alt="Cross">
+                <img class="w-8" src="../assets/images/cross.svg" alt="Cross">
 
                 <a href="https://www.uni-hamburg.de/exzellenz/fuenf-zentrale-themen/transfer/transferagentur.html">
-                    <img src="assets/images/transferagentur-logo.png" alt="Transferagentur Logo" class="w-72">
+                    <img src="../assets/images/transferagentur-logo.png" alt="Transferagentur Logo" class="w-72">
                 </a>
             </div>
         </div>
