Update recipe pages with new images, adjust styles, and modify footer credits

--- a/weihnachtsrezepte/index.html
+++ b/weihnachtsrezepte/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@800&display=swap" rel="stylesheet">
 	<title>Drei Rezepte für Aschenbrödel</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -38,7 +38,7 @@
 				<article class="recipe-preview">
 					<a href="spekulatiusdessert.html">
 						<figure>
-							<img src="spekulatiusdessert.jpg" alt="Spekulatiusdessert im Glas">
+							<img src="spekulatius-himbeer-dessert.png" alt="Spekulatiusdessert im Glas">
 						</figure>
 						<h2>Spekulatiusdessert im Glas</h2>
 					</a>
@@ -46,7 +46,7 @@
 				<article class="recipe-preview">
 					<a href="lebkuchentiramisu.html">
 						<figure>
-							<img src="lebkuchentiramisu.jpg" alt="Lebkuchentiramisu">
+							<img src="tiramisu-lebkuchen.png" alt="Lebkuchentiramisu">
 						</figure>
 						<h2>Lebkuchentiramisu</h2>
 					</a>
@@ -59,7 +59,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2025 Rezept-Webseite für Schüler</p>
+		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
 </body>
 
