--- a/weihnachtsrezepte/lebkuchentiramisu.html
+++ b/weihnachtsrezepte/lebkuchentiramisu.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
 	<title>Lebkuchentiramisu - Drei Rezepte für Aschenbrödel</title>
 	<link rel="stylesheet" href="style.css">
@@ -25,58 +25,63 @@
 	</nav>
 
 	<main>
-		<article id="lebkuchentiramisu">
-			<h2>Lebkuchentiramisu</h2>
-			<figure>
-				<img src="lebkuchentiramisu.jpg" alt="Lebkuchentiramisu">
-				<figcaption>Weihnachtliches Lebkuchentiramisu</figcaption>
-			</figure>
-			<div>
-				<p><strong>Zubereitungszeit:</strong> 25 Minuten + 4 Stunden Kühlzeit</p>
-				<p><strong>Portionen:</strong> 6 Portionen</p>
-			</div>
+		<div class="grid-container">
+			<article id="lebkuchentiramisu">
+				<h2>Lebkuchentiramisu</h2>
+				<figure>
+					<img src="tiramisu-lebkuchen.png" alt="Lebkuchentiramisu">
+					<figcaption>Weihnachtliches Lebkuchentiramisu</figcaption>
+				</figure>
+				<div>
+					<p><strong>Zubereitungszeit:</strong> 25 Minuten + 4 Stunden Kühlzeit</p>
+					<p><strong>Portionen:</strong> 6 Portionen</p>
+				</div>
 
-			<h3>Zutaten:</h3>
-			<ul>
-				<li>200 g Lebkuchen</li>
-				<li>250 g Mascarpone</li>
-				<li>250 g Quark</li>
-				<li>100 g Zucker</li>
-				<li>1 Päckchen Vanillezucker</li>
-				<li>200 ml Sahne</li>
-				<li>100 ml starker Kaffee (abgekühlt)</li>
-				<li>Kakaopulver zum Bestäuben</li>
-			</ul>
+				<h3>Zutaten:</h3>
+				<ul>
+					<li>200 g Lebkuchen</li>
+					<li>250 g Mascarpone</li>
+					<li>250 g Quark</li>
+					<li>100 g Zucker</li>
+					<li>1 Päckchen Vanillezucker</li>
+					<li>200 ml Sahne</li>
+					<li>100 ml starker Kaffee (abgekühlt)</li>
+					<li>Kakaopulver zum Bestäuben</li>
+				</ul>
 
-			<h3>Benötigte Utensilien:</h3>
-			<ul>
-				<li>Mischer oder Handrührgerät</li>
-				<li>Schüssel</li>
-				<li>Auflaufform oder Servierschüssel</li>
-				<li>Löffel zum Umrühren</li>
-				<li>Messer zum Schneiden</li>
-				<li>Sieb zum Bestäuben</li>
-			</ul>
+				<h3>Benötigte Utensilien:</h3>
+				<ul>
+					<li>Mischer oder Handrührgerät</li>
+					<li>Schüssel</li>
+					<li>Auflaufform oder Servierschüssel</li>
+					<li>Löffel zum Umrühren</li>
+					<li>Messer zum Schneiden</li>
+					<li>Sieb zum Bestäuben</li>
+				</ul>
 
-			<h3>Zubereitung:</h3>
-			<ol>
-				<li>Die Sahne in eine Schüssel geben und mit dem Mischer steif schlagen.</li>
-				<li>Mascarpone, Quark, Zucker und Vanillezucker in einer anderen Schüssel glatt rühren.</li>
-				<li>Die geschlagene Sahne vorsichtig unter die Mascarpone-Quark-Masse heben.</li>
-				<li>Den Kaffee zubereiten und abkühlen lassen.</li>
-				<li>Die Lebkuchen in Scheiben schneiden.</li>
-				<li>Eine Schicht Lebkuchenscheiben in die Form legen und mit dem abgekühlten Kaffee beträufeln.</li>
-				<li>Eine Schicht Creme darauf verteilen.</li>
-				<li>Den Vorgang wiederholen, bis alle Zutaten verbraucht sind.</li>
-				<li>Mit einer Schicht Creme abschließen.</li>
-				<li>Das Tiramisu für mindestens 4 Stunden im Kühlschrank kalt stellen.</li>
-				<li>Vor dem Servieren mit Kakaopulver durch ein Sieb bestäuben.</li>
-			</ol>
-		</article>
+				<h3>Zubereitung:</h3>
+				<ol>
+					<li>Die Sahne in eine Schüssel geben und mit dem Mischer steif schlagen.</li>
+					<li>Mascarpone, Quark, Zucker und Vanillezucker in einer anderen Schüssel glatt rühren.</li>
+					<li>Die geschlagene Sahne vorsichtig unter die Mascarpone-Quark-Masse heben.</li>
+					<li>Den Kaffee zubereiten und abkühlen lassen.</li>
+					<li>Die Lebkuchen in Scheiben schneiden.</li>
+					<li>Eine Schicht Lebkuchenscheiben in die Form legen und mit dem abgekühlten Kaffee beträufeln.</li>
+					<li>Eine Schicht Creme darauf verteilen.</li>
+					<li>Den Vorgang wiederholen, bis alle Zutaten verbraucht sind.</li>
+					<li>Mit einer Schicht Creme abschließen.</li>
+					<li>Das Tiramisu für mindestens 4 Stunden im Kühlschrank kalt stellen.</li>
+					<li>Vor dem Servieren mit Kakaopulver durch ein Sieb bestäuben.</li>
+				</ol>
+			</article>
+			<aside class="tree-background">
+				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+			</aside>
+		</div>
 	</main>
 
 	<footer>
-		<p>&copy; 2025 Rezept-Webseite für Schüler</p>
+		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
 </body>
 
