--- a/weihnachtsrezepte/lotuskekseis.html
+++ b/weihnachtsrezepte/lotuskekseis.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
 	<title>Lotuskekseis - Drei Rezepte für Aschenbrödel</title>
 	<link rel="stylesheet" href="style.css">
@@ -25,49 +25,54 @@
 	</nav>
 
 	<main>
-		<article id="lotuskekseis">
-			<h2>Lotuskekseis</h2>
-			<figure>
-				<img src="lotuskekseis.jpg" alt="Lotuskekseis in einer Schüssel">
-				<figcaption>Leckeres Lotuskekseis</figcaption>
-			</figure>
-			<div>
-				<p><strong>Zubereitungszeit:</strong> 20 Minuten + 6 Stunden Kühlzeit</p>
-				<p><strong>Portionen:</strong> 4-6 Portionen</p>
-			</div>
+		<div class="grid-container">
+			<article id="lotuskekseis">
+				<h2>Lotuskekseis</h2>
+				<figure>
+					<img src="lotuskekseis.jpg" alt="Lotuskekseis in einer Schüssel">
+					<figcaption>Leckeres Lotuskekseis</figcaption>
+				</figure>
+				<div>
+					<p><strong>Zubereitungszeit:</strong> 20 Minuten + 6 Stunden Kühlzeit</p>
+					<p><strong>Portionen:</strong> 4-6 Portionen</p>
+				</div>
 
-			<h3>Zutaten:</h3>
-			<ul>
-				<li>200 g Lotuskekse</li>
-				<li>500 ml Sahne</li>
-				<li>400 ml gezuckerte Kondensmilch</li>
-				<li>1 TL Vanilleextrakt</li>
-			</ul>
+				<h3>Zutaten:</h3>
+				<ul>
+					<li>200 g Lotuskekse</li>
+					<li>500 ml Sahne</li>
+					<li>400 ml gezuckerte Kondensmilch</li>
+					<li>1 TL Vanilleextrakt</li>
+				</ul>
 
-			<h3>Benötigte Utensilien:</h3>
-			<ul>
-				<li>Mischer oder Handrührgerät</li>
-				<li>Schüssel</li>
-				<li>Gefriergeeignete Form</li>
-				<li>Löffel zum Umrühren</li>
-			</ul>
+				<h3>Benötigte Utensilien:</h3>
+				<ul>
+					<li>Mischer oder Handrührgerät</li>
+					<li>Schüssel</li>
+					<li>Gefriergeeignete Form</li>
+					<li>Löffel zum Umrühren</li>
+				</ul>
 
-			<h3>Zubereitung:</h3>
-			<ol>
-				<li>Die Lotuskekse in eine Schüssel geben und fein zerbröseln.</li>
-				<li>Die Sahne in eine große Schüssel geben und mit dem Mischer steif schlagen.</li>
-				<li>Die gezuckerte Kondensmilch und den Vanilleextrakt vorsichtig unter die geschlagene Sahne heben.
-				</li>
-				<li>Die Keksbrösel unter die Masse mischen.</li>
-				<li>Die Mischung in eine gefriergeeignete Form füllen.</li>
-				<li>Das Eis mindestens 6 Stunden im Gefrierschrank einfrieren.</li>
-				<li>Vor dem Servieren kurz antauen lassen.</li>
-			</ol>
-		</article>
+				<h3>Zubereitung:</h3>
+				<ol>
+					<li>Die Lotuskekse in eine Schüssel geben und fein zerbröseln.</li>
+					<li>Die Sahne in eine große Schüssel geben und mit dem Mischer steif schlagen.</li>
+					<li>Die gezuckerte Kondensmilch und den Vanilleextrakt vorsichtig unter die geschlagene Sahne heben.
+					</li>
+					<li>Die Keksbrösel unter die Masse mischen.</li>
+					<li>Die Mischung in eine gefriergeeignete Form füllen.</li>
+					<li>Das Eis mindestens 6 Stunden im Gefrierschrank einfrieren.</li>
+					<li>Vor dem Servieren kurz antauen lassen.</li>
+				</ol>
+			</article>
+			<aside class="tree-background">
+				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+			</aside>
+		</div>
 	</main>
 
 	<footer>
-		<p>&copy; 2025 Rezept-Webseite für Schüler</p>
+		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
 </body>
 
