--- a/weihnachtsrezepte/spekulatiusdessert.html
+++ b/weihnachtsrezepte/spekulatiusdessert.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
 	<title>Spekulatiusdessert im Glas - Drei Rezepte für Aschenbrödel</title>
 	<link rel="stylesheet" href="style.css">
@@ -25,54 +25,59 @@
 	</nav>
 
 	<main>
-		<article id="spekulatiusdessert">
-			<h2>Spekulatiusdessert im Glas</h2>
-			<figure>
-				<img src="spekulatiusdessert.jpg" alt="Spekulatiusdessert im Glas">
-				<figcaption>Festliches Spekulatiusdessert</figcaption>
-			</figure>
-			<div>
-				<p><strong>Zubereitungszeit:</strong> 30 Minuten + 2 Stunden Kühlzeit</p>
-				<p><strong>Portionen:</strong> 4 Portionen</p>
-			</div>
+		<div class="grid-container">
+			<article id="spekulatiusdessert">
+				<h2>Spekulatiusdessert im Glas</h2>
+				<figure>
+					<img src="spekulatius-himbeer-dessert.png" alt="Spekulatiusdessert im Glas">
+					<figcaption>Festliches Spekulatiusdessert</figcaption>
+				</figure>
+				<div>
+					<p><strong>Zubereitungszeit:</strong> 30 Minuten + 2 Stunden Kühlzeit</p>
+					<p><strong>Portionen:</strong> 4 Portionen</p>
+				</div>
 
-			<h3>Zutaten:</h3>
-			<ul>
-				<li>200 g Spekulatius</li>
-				<li>250 g Mascarpone</li>
-				<li>250 g Quark</li>
-				<li>100 g Zucker</li>
-				<li>1 Päckchen Vanillezucker</li>
-				<li>200 ml Sahne</li>
-				<li>350 g Himbeeren (frisch oder tiefgekühlt)</li>
-			</ul>
+				<h3>Zutaten:</h3>
+				<ul>
+					<li>200 g Spekulatius</li>
+					<li>250 g Mascarpone</li>
+					<li>250 g Quark</li>
+					<li>100 g Zucker</li>
+					<li>1 Päckchen Vanillezucker</li>
+					<li>200 ml Sahne</li>
+					<li>350 g Himbeeren (frisch oder tiefgekühlt)</li>
+				</ul>
 
-			<h3>Benötigte Utensilien:</h3>
-			<ul>
-				<li>Mischer oder Handrührgerät</li>
-				<li>Schüssel</li>
-				<li>4 Gläser zum Servieren</li>
-				<li>Löffel zum Umrühren</li>
-				<li>Messer zum Zerkleinern</li>
-			</ul>
+				<h3>Benötigte Utensilien:</h3>
+				<ul>
+					<li>Mischer oder Handrührgerät</li>
+					<li>Schüssel</li>
+					<li>4 Gläser zum Servieren</li>
+					<li>Löffel zum Umrühren</li>
+					<li>Messer zum Zerkleinern</li>
+				</ul>
 
-			<h3>Zubereitung:</h3>
-			<ol>
-				<li>Die Spekulatius grob zerbröseln.</li>
-				<li>Die Sahne in eine Schüssel geben und mit dem Mischer steif schlagen.</li>
-				<li>Mascarpone, Quark, Zucker und Vanillezucker in einer anderen Schüssel glatt rühren.</li>
-				<li>Die geschlagene Sahne vorsichtig unter die Mascarpone-Quark-Masse heben.</li>
-				<li>Die Himbeeren waschen und halbieren (falls frisch) oder auftauen lassen.</li>
-				<li>In die Gläser abwechselnd eine Schicht Spekulatiusbrösel, eine Schicht Creme und eine Schicht
-					Himbeeren einfüllen.</li>
-				<li>Mit einer Schicht Spekulatiusbrösel abschließen.</li>
-				<li>Das Dessert für mindestens 2 Stunden im Kühlschrank kalt stellen.</li>
-			</ol>
-		</article>
+				<h3>Zubereitung:</h3>
+				<ol>
+					<li>Die Spekulatius grob zerbröseln.</li>
+					<li>Die Sahne in eine Schüssel geben und mit dem Mischer steif schlagen.</li>
+					<li>Mascarpone, Quark, Zucker und Vanillezucker in einer anderen Schüssel glatt rühren.</li>
+					<li>Die geschlagene Sahne vorsichtig unter die Mascarpone-Quark-Masse heben.</li>
+					<li>Die Himbeeren waschen und halbieren (falls frisch) oder auftauen lassen.</li>
+					<li>In die Gläser abwechselnd eine Schicht Spekulatiusbrösel, eine Schicht Creme und eine Schicht
+						Himbeeren einfüllen.</li>
+					<li>Mit einer Schicht Spekulatiusbrösel abschließen.</li>
+					<li>Das Dessert für mindestens 2 Stunden im Kühlschrank kalt stellen.</li>
+				</ol>
+			</article>
+			<aside class="tree-background">
+				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+			</aside>
+		</div>
 	</main>
 
 	<footer>
-		<p>&copy; 2025 Rezept-Webseite für Schüler</p>
+		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
 </body>
 
