Update recipe pages to remove alt attributes from images, replace image sources, and adjust CSS styles for better layout

--- a/weihnachtsrezepte/index.html
+++ b/weihnachtsrezepte/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<img src="logo.png" alt="Logo">
+		<img src="logo.png">
 	</header>
 
 	<nav>
@@ -30,7 +30,7 @@
 				<article class="recipe-preview">
 					<a href="lotuskekseis.html">
 						<figure>
-							<img src="lotuskekseis.jpg" alt="Lotuskekseis">
+							<img src="lotuskeks-eis.png">
 						</figure>
 						<h2>Lotuskekseis</h2>
 					</a>
@@ -38,7 +38,7 @@
 				<article class="recipe-preview">
 					<a href="spekulatiusdessert.html">
 						<figure>
-							<img src="spekulatius-himbeer-dessert.png" alt="Spekulatiusdessert im Glas">
+							<img src="spekulatius-himbeer-dessert.png">
 						</figure>
 						<h2>Spekulatiusdessert im Glas</h2>
 					</a>
@@ -46,14 +46,14 @@
 				<article class="recipe-preview">
 					<a href="lebkuchentiramisu.html">
 						<figure>
-							<img src="tiramisu-lebkuchen.png" alt="Lebkuchentiramisu">
+							<img src="tiramisu-lebkuchen.png">
 						</figure>
 						<h2>Lebkuchentiramisu</h2>
 					</a>
 				</article>
 			</section>
 			<aside class="tree-background">
-				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+				<img src="weihnachtsbaum.jpg">
 			</aside>
 		</div>
 	</main>
