--- a/weihnachtsrezepte/lebkuchentiramisu.html
+++ b/weihnachtsrezepte/lebkuchentiramisu.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<img src="logo.png" alt="Logo">
+		<img src="logo.png">
 	</header>
 
 	<nav>
@@ -29,7 +29,7 @@
 			<article id="lebkuchentiramisu">
 				<h2>Lebkuchentiramisu</h2>
 				<figure>
-					<img src="tiramisu-lebkuchen.png" alt="Lebkuchentiramisu">
+					<img src="tiramisu-lebkuchen.png">
 					<figcaption>Weihnachtliches Lebkuchentiramisu</figcaption>
 				</figure>
 				<div>
@@ -75,7 +75,7 @@
 				</ol>
 			</article>
 			<aside class="tree-background">
-				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+				<img src="weihnachtsbaum.jpg">
 			</aside>
 		</div>
 	</main>
