--- a/weihnachtsrezepte/lotuskekseis.html
+++ b/weihnachtsrezepte/lotuskekseis.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<img src="logo.png" alt="Logo">
+		<img src="logo.png">
 	</header>
 
 	<nav>
@@ -29,7 +29,7 @@
 			<article id="lotuskekseis">
 				<h2>Lotuskekseis</h2>
 				<figure>
-					<img src="lotuskekseis.jpg" alt="Lotuskekseis in einer Schüssel">
+					<img src="lotuskeks-eis.png">
 					<figcaption>Leckeres Lotuskekseis</figcaption>
 				</figure>
 				<div>
@@ -66,7 +66,7 @@
 				</ol>
 			</article>
 			<aside class="tree-background">
-				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+				<img src="weihnachtsbaum.jpg">
 			</aside>
 		</div>
 	</main>
