--- a/weihnachtsrezepte/spekulatiusdessert.html
+++ b/weihnachtsrezepte/spekulatiusdessert.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<img src="logo.png" alt="Logo">
+		<img src="logo.png">
 	</header>
 
 	<nav>
@@ -29,7 +29,7 @@
 			<article id="spekulatiusdessert">
 				<h2>Spekulatiusdessert im Glas</h2>
 				<figure>
-					<img src="spekulatius-himbeer-dessert.png" alt="Spekulatiusdessert im Glas">
+					<img src="spekulatius-himbeer-dessert.png">
 					<figcaption>Festliches Spekulatiusdessert</figcaption>
 				</figure>
 				<div>
@@ -71,7 +71,7 @@
 				</ol>
 			</article>
 			<aside class="tree-background">
-				<img src="weihnachtsbaum.jpg" alt="Weihnachtsbaum">
+				<img src="weihnachtsbaum.jpg">
 			</aside>
 		</div>
 	</main>
