Add recipe scaler functionality to Lebkuchentiramisu, Lotus Keks, and Spekulatius Dessert pages

--- a/weihnachtsrezepte/lotuskekseis.html
+++ b/weihnachtsrezepte/lotuskekseis.html
@@ -74,6 +74,7 @@
 	<footer>
 		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
+	<script src="recipe-scaler.js"></script>
 </body>
 
 </html>
