--- a/weihnachtsrezepte/lebkuchentiramisu.html
+++ b/weihnachtsrezepte/lebkuchentiramisu.html
@@ -83,6 +83,7 @@
 	<footer>
 		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
+	<script src="recipe-scaler.js"></script>
 </body>
 
 </html>
