--- a/weihnachtsrezepte/spekulatiusdessert.html
+++ b/weihnachtsrezepte/spekulatiusdessert.html
@@ -79,6 +79,7 @@
 	<footer>
 		<p>&copy; 2025 by Aliye, Selina und Annalena</p>
 	</footer>
+	<script src="recipe-scaler.js"></script>
 </body>
 
 </html>
