Revamp homepage with a new blog introduction section, showcasing featured recipes and enhancing layout with updated CSS styles for better presentation.

--- a/weihnachtsrezepte/index.html
+++ b/weihnachtsrezepte/index.html
@@ -26,32 +26,29 @@
 
 	<main>
 		<div class="grid-container">
-			<section class="recipes">
-				<article class="recipe-preview">
-					<a href="lotuskekseis.html">
-						<figure>
-							<img src="lotuskeks-eis.png">
-						</figure>
-						<h2>Lotuskekseis</h2>
-					</a>
-				</article>
-				<article class="recipe-preview">
-					<a href="spekulatiusdessert.html">
-						<figure>
-							<img src="spekulatius-himbeer-dessert.png">
-						</figure>
-						<h2>Spekulatiusdessert im Glas</h2>
-					</a>
-				</article>
-				<article class="recipe-preview">
-					<a href="lebkuchentiramisu.html">
-						<figure>
-							<img src="tiramisu-lebkuchen.png">
-						</figure>
-						<h2>Lebkuchentiramisu</h2>
-					</a>
-				</article>
-			</section>
+			<div class="blog-intro">
+				<h2>Willkommen bei "Drei Rezepte für Aschenbrödel"</h2>
+				<p>Herzlich willkommen auf unserem kulinarischen Blog! Wir sind Aliye, Selina und Annalena und teilen
+					hier unsere Leidenschaft für köstliche Rezepte mit euch.</p>
+				<p>Unser Blog widmet sich der Kunst des Kochens und Backens. Wir lieben es, neue Geschmackskombinationen
+					zu entdecken und traditionelle Rezepte mit modernen Twist zu verfeinern. Besonders in der
+					Weihnachtszeit zaubern wir gerne festliche Leckereien, die nicht nur gut schmecken, sondern auch das
+					Herz erwärmen.</p>
+				<p>Jede Woche veröffentlichen wir drei neue Rezepte, die ihr direkt nachkochen könnt. Hier findet ihr
+					eine Auswahl unserer liebsten Rezepte – von süßen Desserts bis hin zu herzhaften Köstlichkeiten.
+					Jedes Rezept haben wir selbst getestet und mit viel Liebe zum Detail entwickelt.</p>
+				<p>Wir freuen uns, wenn ihr unsere Rezepte nachkocht und eure eigenen kulinarischen Abenteuer erlebt.
+					Viel Spaß beim Kochen und Genießen!</p>
+				<h3>Unsere aktuellen Rezepte:</h3>
+				<ul>
+					<li><a href="lotuskekseis.html">Lotuskekseis</a> – Ein cremiges, erfrischendes Eis mit dem
+						unverwechselbaren Geschmack von Lotuskeksen</li>
+					<li><a href="spekulatiusdessert.html">Spekulatiusdessert im Glas</a> – Ein festliches Dessert mit
+						Spekulatius und Himbeeren</li>
+					<li><a href="lebkuchentiramisu.html">Lebkuchentiramisu</a> – Eine weihnachtliche Variation des
+						klassischen Tiramisu</li>
+				</ul>
+			</div>
 			<aside class="tree-background">
 				<img src="weihnachtsbaum.jpg">
 			</aside>
